recursion.cons.lessons.recursion.cons.Length.scala.error
length:5: error: ')' expected but ';' found.
		case l => (count = count + 1; length (l.tail);)
                                            ^length:5: error: illegal start of statement
		case l => (count = count + 1; length (l.tail);)
                                                              ^